Task Manager-Backend/src/main/java/com/example/taskmanager/error/UserAlreadyExistsException.java
package com.example.taskmanager.error;

public class UserAlreadyExistsException extends RuntimeException {
    public UserAlreadyExistsException(String username) {
        super("User with username " + username + " already exists");
    }
}
